# ros2_lab

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
experience/: index.json
experience/sessions/: 20260413-181238--moveit-quickstart.json  20260416-122035--task7c-ursim-smoke.json  20260427-111657--task7e-moveit-servo.json
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
notes/: ur3_control_chain_task3.md
notes/concepts/: follow_joint_trajectory_debug.md  ros2_control_minimal_chain.md  task5B_ur_controller_system.md  urdf_xacro_parameterization.md
notes/labs/: task4A_service_vs_topic_action.md  task4B_qos_experiment.md  task4C_tf2_lookup.md  task4G_controller_comparison.md  task5A_ur_driver_fake_hardware.md  task5C_minimal_control_node.md  task6A_cpp_action_client.md  task6B_ursim_speed_scaling.md  task7A_moveit_quickstart.md  task7B_move_group_interface_cpp.md  task7C_planning_scene_collision.md  task7D_goal_pose_auto_plan.md  task7E_moveit_servo.md  task8A_real_robot_preflight.md  task8B_real_robot_readonly_bringup.md  task8C_dashboard_controller_state.md  task8D_guarded_home_ready_motion.md  task8E_safe_stop_and_fault_handling.md  task8F_real_robot_acceptance.md
notes/plans/: stage1_next_steps_learning_plan.md
notes/plans/archive/: stage1_learning_plan.md  stage2_learning_plan.md  stage3_learning_plan.md  stage4_learning_plan.md
notes/plans/tasks/: task4A_plan.md  task4B_plan.md  task4C_plan.md  task4D_plan.md  task4E_plan.md  task4F_execution_summary.md  task4F_plan.md  task4F_practice_plan.md  task4G_plan.md  task4H_plan.md  task5A_plan.md  task5B_plan.md  task5C_plan.md  task6A_plan.md  task6B_plan.md  task7A_plan.md  task7B_plan.md  task7C_plan.md  task7D_plan.md  task7E_plan.md  task8A_plan.md  task8B_plan.md  task8C_plan.md  task8D_plan.md  task8E_plan.md  task8F_plan.md
notes/reports/: stage1_review.md
notes/runbooks/: follow_joint_trajectory_debug.md  real_time_overrun_mitigation.md
workspaces/ws_stage2/src/ur3_minimal_control_lab_cpp/: CMakeLists.txt  package.xml
workspaces/ws_stage2/src/ur3_minimal_control_lab_cpp/launch/: task6A_cpp_action_client.launch.py
workspaces/ws_stage2/src/ur3_minimal_control_lab_cpp/src/: joint_trajectory_sender.cpp
workspaces/ws_stage3/src/ur3_moveit_goal_pose_lab_cpp/: CMakeLists.txt  package.xml
workspaces/ws_stage3/src/ur3_moveit_goal_pose_lab_cpp/launch/: task7D_goal_pose_auto_plan.launch.py
workspaces/ws_stage3/src/ur3_moveit_goal_pose_lab_cpp/src/: goal_pose_executor_node.cpp
workspaces/ws_stage3/src/ur3_moveit_scene_lab_cpp/: CMakeLists.txt  package.xml
workspaces/ws_stage3/src/ur3_moveit_scene_lab_cpp/launch/: task7C_scene_cartesian.launch.py
workspaces/ws_stage3/src/ur3_moveit_scene_lab_cpp/src/: scene_cartesian_demo_node.cpp
workspaces/ws_stage3/src/ur3_moveit_servo_lab_cpp/: CMakeLists.txt  package.xml
workspaces/ws_stage3/src/ur3_moveit_servo_lab_cpp/config/: task7E_initial_positions.yaml
workspaces/ws_stage3/src/ur3_moveit_servo_lab_cpp/launch/: task7E_moveit_servo.launch.py  task7E_ur_rsp.launch.py
workspaces/ws_stage3/src/ur3_moveit_servo_lab_cpp/scripts/: joint_state_stamp_relay.py  run_task7e_full_test.py  wait_for_joint_states.py  wait_for_servo_status.py
workspaces/ws_stage3/src/ur3_moveit_servo_lab_cpp/src/: joint_state_stamp_relay_node.cpp  servo_twist_commander_node.cpp
workspaces/ws_stage3/src/ur3_moveit_servo_lab_cpp/urdf/: task7E_ur.urdf.xacro
workspaces/ws_stage4/src/ur3_real_guarded_motion_lab_cpp/: CMakeLists.txt  package.xml
workspaces/ws_stage4/src/ur3_real_guarded_motion_lab_cpp/config/: task8D_guarded_targets.yaml
workspaces/ws_stage4/src/ur3_real_guarded_motion_lab_cpp/launch/: task8D_guarded_home_ready.launch.py  task8E_fault_review.launch.py
workspaces/ws_stage4/src/ur3_real_guarded_motion_lab_cpp/src/: guarded_joint_motion_node.cpp
workspaces/ws_tutorials/src/ur3_follow_joint_trajectory_client_py/: package.xml  setup.cfg  setup.py
workspaces/ws_tutorials/src/ur3_follow_joint_trajectory_client_py/ur3_follow_joint_trajectory_client_py/: follow_joint_trajectory_client_node.py
workspaces/ws_tutorials/src/ur3_joint_state_publisher_py/: package.xml  setup.cfg  setup.py
workspaces/ws_tutorials/src/ur3_joint_state_publisher_py/launch/: ur3_simplified_rviz.launch.py
workspaces/ws_tutorials/src/ur3_joint_state_publisher_py/rviz/: ur3_simplified.rviz
workspaces/ws_tutorials/src/ur3_joint_state_publisher_py/ur3_joint_state_publisher_py/: joint_state_publisher_node.py
workspaces/ws_tutorials/src/ur3_joint_state_publisher_py/urdf/: ur3_simplified.urdf  ur3_simplified.urdf.xacro  ur3_simplified_macro.xacro
workspaces/ws_tutorials/src/ur3_joint_trajectory_controller_lab_py/: package.xml  setup.cfg  setup.py
workspaces/ws_tutorials/src/ur3_joint_trajectory_controller_lab_py/config/: ur3_controllers_with_trajectory.yaml
workspaces/ws_tutorials/src/ur3_joint_trajectory_controller_lab_py/launch/: ur3_joint_trajectory_controller.launch.py
workspaces/ws_tutorials/src/ur3_joint_trajectory_controller_lab_py/scripts/: test_trajectory_client.py
workspaces/ws_tutorials/src/ur3_qos_lab_py/: package.xml  setup.cfg  setup.py
workspaces/ws_tutorials/src/ur3_qos_lab_py/launch/: qos_lab_pair.launch.py
workspaces/ws_tutorials/src/ur3_qos_lab_py/ur3_qos_lab_py/: __init__.py  qos_profile_utils.py  qos_publisher_node.py  qos_subscriber_node.py
workspaces/ws_tutorials/src/ur3_ros2_control_lab_py/: package.xml  setup.cfg  setup.py
workspaces/ws_tutorials/src/ur3_ros2_control_lab_py/launch/: ur3_ros2_control_minimal.launch.py
workspaces/ws_tutorials/src/ur3_ros2_control_lab_py/ur3_ros2_control_lab_py/: __init__.py
workspaces/ws_tutorials/src/ur3_ros2_control_lab_py/urdf/: ur3_simplified_ros2_control.urdf.xacro
workspaces/ws_tutorials/src/ur3_stage1_review_cpp/: CMakeLists.txt  package.xml
workspaces/ws_tutorials/src/ur3_stage1_review_cpp/src/: demo_package_build.cpp
workspaces/ws_tutorials/src/ur3_state_monitor_cpp/: CMakeLists.txt  package.xml
workspaces/ws_tutorials/src/ur3_state_monitor_cpp/src/: ur3_state_monitor_node.cpp
(+64 files in other folders)
